tests/marouter/errors/false_options/missing_net/errors.marouter
Error: Missing definition of network to load!
Quitting (on error).
